--- a/lib/phoenix_chat_web/templates/page/index.html.eex
+++ b/lib/phoenix_chat_web/templates/page/index.html.eex
@@ -1,35 +1,20 @@
-<section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
-</section>
+<div class="container">
+    <div class="row">
+        <label for="nameField">From:</label>
+        <div class="column">
+            <input type="text" placeholder="@nickname" id="nameField" required>
+        </div>
+        <label for="nameField">To:</label>
+        <div class="column">
+            <input type="text" placeholder="@nickname" id="nameField" required>
+        </div>
+        <label for="nameField">Message:</label>
+        <div class="column column-50">
+            <input type="text" placeholder="Message" id="nameField" required>
+        </div>
+        <div class="column"><a class="button" href="#">Send</a></div>
+    </div>
+</div>
 
-<section class="row">
-  <article class="column">
-    <h2>Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.4/CHANGELOG.md">v1.4 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-    </ul>
-  </article>
-</section>
+<div id="messages" class="container">
+</div>
